frontend/test/should_pass/exectype_AssignSetCreationToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<HH> =set<HH>);
	}
}