frontend/test/should_fail/exectype_AssignSetmapSizeToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<foo> =set<foo> ;> {i:boolean=x.size()});
	}
}